# sd-import

./: .gitignore  CHANGELOG.md  README.md  com.user.sdimport.plist.template  config.example.toml  install.sh  pyproject.toml  sd_import.py  uninstall.sh
