[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-sd-photo-import"
version = "0.1.0"
description = "Auto-import photos from SD card on macOS, organized by date"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alec Mandla" }]
keywords = ["macos", "photography", "sd-card", "exif", "launchd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "Pillow>=10.0",
    "exifread>=3.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
sd-import = "sd_import:main"

[project.urls]
Homepage = "https://github.com/alecmandla/sd-import"
Issues = "https://github.com/alecmandla/sd-import/issues"

[tool.setuptools]
py-modules = ["sd_import"]
